# Kolium

./: .gitignore  2026-04-27-Shadow-Ticket-Highlights.md  2026-04-27-Shadowbahn-Highlights.md  2026-04-27-The-Burnout-Society-Highlights.md  2026-04-27-When-We-Cease-to-Understand-the-World-Highlights.md  README.md  TODO.md  pyproject.toml  test-output.md
src/kolium/: __init__.py  cli.py  dictionary.py  finder.py  generator.py  parser.py  processor.py
tests/: test_cli.py  test_dictionary.py  test_extraction_integration.py  test_finder.py  test_generator.py  test_parser.py  test_processor.py  test_search_cli.py
