[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kolium"
version = "0.1.0"
description = "Process and sort KOReader book highlights from Markdown exports"
requires-python = ">=3.11"
dependencies = [
    "spacy>=3.7",
    "nltk>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[project.scripts]
kolium = "kolium.cli:main"

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
